package com.swp391.backend.enums;

public enum NotificationType {
    booking_confirmation,
    booking_reminder,
    cancellation,
    refund,
    payment,
    issue,
    system
}
