package com.swp391.backend.enums;

public enum PaymentMethod {
    cash,
    online_sandbox,
    paypal_sandbox,
    bank_transfer
}
