@startuml

skinparam classAttributeIconSize 0
skinparam linetype polyline

class PaymentController <<controller>> {
    -paymentWorkflowService : PaymentWorkflowService
    -payPalCheckoutService : PayPalCheckoutService

    +capturePayment(@RequestBody ApiRequests.PaymentCapture request) : Object
    +cancelPayPalOrder(@PathVariable Long bookingId, @PathVariable String orderId) : Object
}

class PaymentWorkflowService <<service>> {
    -support : DomainSupportService

    +capturePayment(request : ApiRequests.PaymentCapture) : Map<String, Object>
}

class PayPalCheckoutService <<service>> {
    -support : DomainSupportService

    +cancelOrder(bookingId : Long, orderId : String) : Map<String, Object>
}

class DomainSupportService <<service>> {
    -bookingRepository : BookingRepository
    -paymentRepository : PaymentRepository
    -userRepository : AppUserRepository
    -notificationRepository : NotificationRepository
    -invoiceRepository : InvoiceRepository

    +getBooking(bookingId : Long) : Booking
    +getUser(userId : Long) : AppUser
    +parseEnum(enumType : Class<T>, value : String, fallback : T) : T
    +notifyUser(user : AppUser, booking : Booking, type : NotificationType, title : String, message : String) : void
    +generateInvoice(booking : Booking) : void
    +paymentStatus(booking : Booking) : String
    +money(value : BigDecimal) : BigDecimal
    +badRequest(message : String) : ApiException
    +notFound(message : String) : ApiException
}

class "ApiRequests.PaymentCapture" as PaymentCaptureDTO <<dto>> {
    -bookingId : Long
    -paymentOption : String
    -paymentMethod : String
    -amount : BigDecimal
    -success : boolean
}

interface BookingRepository <<repository>> {
    +findById(id : Long) : Optional<Booking>
    +findByStatusIn(statuses : Collection<BookingStatus>) : List<Booking>
}

interface AppUserRepository <<repository>> {
    +findById(id : Long) : Optional<AppUser>
}

interface PaymentRepository <<repository>> {
    +save(entity : Payment) : Payment
    +findByProviderOrderId(providerOrderId : String) : Optional<Payment>
    +findByBooking_BookingIdOrderByPaymentIdDesc(bookingId : Long) : List<Payment>
}

interface NotificationRepository <<repository>> {
    +save(entity : Notification) : Notification
}

interface InvoiceRepository <<repository>> {
    +findByBooking_BookingId(bookingId : Long) : Optional<Invoice>
    +save(entity : Invoice) : Invoice
}

class AuditEntity <<entity>> {
    -createdAt : LocalDateTime
    -updatedAt : LocalDateTime
}

class Booking <<entity>> {
    -bookingId : Long
    -customer : AppUser
    -staff : AppUser
    -slot : Slot
    -bookingCode : String
    -status : BookingStatus
    -bookingSource : BookingSource
    -fieldPriceAmount : BigDecimal
    -serviceTotalAmount : BigDecimal
    -promotionDiscountAmount : BigDecimal
    -membershipDiscountAmount : BigDecimal
    -totalAmount : BigDecimal
    -depositAmount : BigDecimal
    -paidAmount : BigDecimal
    -remainingAmount : BigDecimal
    -cancellationFeeAmount : BigDecimal
    -refundableAmount : BigDecimal
    -note : String
    -confirmedAt : LocalDateTime
    -checkedInAt : LocalDateTime
    -completedAt : LocalDateTime
    -cancelledAt : LocalDateTime
    -expiredAt : LocalDateTime
}

class AppUser <<entity>> {
    -userId : Long
    -role : Role
    -fullName : String
    -email : String
    -phone : String
    -passwordHash : String
    -dateOfBirth : LocalDate
    -address : String
    -status : AccountStatus
    -lockReason : String
    -lastLoginAt : LocalDateTime
    -emailVerified : boolean
    -emailVerificationToken : String
    -emailVerificationSentAt : LocalDateTime
    -passwordResetToken : String
    -passwordResetSentAt : LocalDateTime
}

class Payment <<entity>> {
    -paymentId : Long
    -booking : Booking
    -paymentCode : String
    -paymentOption : PaymentOption
    -paymentMethod : PaymentMethod
    -amount : BigDecimal
    -status : PaymentStatus
    -transactionCode : String
    -providerOrderId : String
    -providerCaptureId : String
    -providerStatus : String
    -currency : String
    -idempotencyKey : String
    -gatewayMessage : String
    -paidAt : LocalDateTime
    -expiredAt : LocalDateTime
    -createdBy : AppUser
}

class Notification <<entity>> {
    -notificationId : Long
    -user : AppUser
    -booking : Booking
    -payment : Payment
    -refund : Refund
    -notificationType : NotificationType
    -title : String
    -message : String
    -read : boolean
    -sentAt : LocalDateTime
    -createdAt : LocalDateTime
}

class Invoice <<entity>> {
    -invoiceId : Long
    -booking : Booking
    -invoiceCode : String
    -fieldAmount : BigDecimal
    -serviceAmount : BigDecimal
    -discountAmount : BigDecimal
    -totalAmount : BigDecimal
    -paidAmount : BigDecimal
    -remainingAmount : BigDecimal
    -refundAmount : BigDecimal
    -issuedAt : LocalDateTime
}

enum PaymentOption {
    + deposit
    + full
    + remaining
}

enum PaymentMethod {
    + cash
    + online_sandbox
    + paypal_sandbox
    + bank_transfer
}

enum PaymentStatus {
    + pending
    + paid
    + failed
    + expired
    + refunded
    + partially_refunded
}

enum BookingStatus {
    + pending
    + confirmed
    + checked_in
    + completed
    + cancelled
    + no_show
    + expired
    + rejected
}

enum NotificationType {
    + booking_confirmation
    + booking_reminder
    + cancellation
    + refund
    + payment
    + issue
    + system
}

class BookingMaintenanceScheduler <<service>> {
    +maintainBookings() : void
    +expireUnpaidPendingBookings() : int
}

' Relationships
PaymentController ..> PaymentWorkflowService
PaymentController ..> PayPalCheckoutService
PaymentController ..> PaymentCaptureDTO
PaymentWorkflowService ..> DomainSupportService
PaymentWorkflowService ..> PaymentCaptureDTO
PayPalCheckoutService ..> DomainSupportService
BookingMaintenanceScheduler ..> DomainSupportService
BookingMaintenanceScheduler ..> BookingRepository
BookingMaintenanceScheduler ..> PaymentRepository
DomainSupportService ..> BookingRepository
DomainSupportService ..> AppUserRepository
DomainSupportService ..> PaymentRepository
DomainSupportService ..> NotificationRepository
DomainSupportService ..> InvoiceRepository
DomainSupportService ..> Booking
DomainSupportService ..> Payment
DomainSupportService ..> Notification
DomainSupportService ..> Invoice
DomainSupportService ..> AppUser
BookingRepository --> Booking
AppUserRepository --> AppUser
PaymentRepository --> Payment
NotificationRepository --> Notification
InvoiceRepository --> Invoice
Payment --> Booking
Payment --> AppUser
Notification --> Booking
Notification --> AppUser
Invoice --> Booking
Booking -|> AuditEntity
AppUser -|> AuditEntity
Payment -|> AuditEntity
Invoice -|> AuditEntity
Payment --> PaymentOption
Payment --> PaymentMethod
Payment --> PaymentStatus
Booking --> BookingStatus
Notification --> NotificationType

@enduml
